--- a/Submissions/Week 5/Lime_Explanation_Pytorch_.ipynb
+++ b/Submissions/Week 5/Lime_Explanation_Pytorch_.ipynb
@@ -28,7 +28,9 @@
         "This notebook aims to show the differences in what pixels are important for the resnet34 , resnet50 , and inception v3 model - detected by LIME\n",
         "Parts of this notebook were genereated with the help of Perplexity AI\n",
         "The notebooks that were taken for inspiration were - https://github.com/marcotcr/lime/blob/master/doc/notebooks/Tutorial%20-%20images%20-%20Pytorch.ipynb\n",
-        "and  Dr. Bent's in class XAI notebooks"
+        "and  Dr. Bent's in class XAI notebooks\n",
+        "\n",
+        "Please add the volcano.png and imagenet_class_index.json data present in the github folder"
       ]
     },
     {
@@ -1598,7 +1600,7 @@
         "1. Model agnostic\n",
         "2. Explains individual predictions -> easy to use for understand what is happenning for a specific instance\n",
         "\n",
-        "Weaknesses of LIME\n",
+        "# Weaknesses of LIME\n",
         "1. Since it perturbs the dataset - and generates perturbed images to predict -> the accuracies may sometimes not be that great\n",
         "2. Can be easily fooled\n",
         "3. Not great for higher order data\n",
